--- a/amazona/.gitignore
+++ b/amazona/.gitignore
@@ -4,6 +4,7 @@
 .vscode
 
 # dependencies
+.env
 node_modules
 /.pnp
 .pnp.js
@@ -24,3 +25,4 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
