--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd amazona/backend && npm install && cd ../../amazona/frontend && npm install && npm run build",
-    "start": "node backend/server.js",
+    "start": "node amazona/backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
